# Proteus

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench.cpp
include/: louds_dense.hpp  louds_sparse.hpp  proteus.hpp  util.cpp  util.hpp
workloads/: CMakeLists.txt
